--- a/vercel.json
+++ b/vercel.json
@@ -2,20 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "app.py",
+      "src": "api/index.py",
       "use": "@vercel/python"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "app.py"
+      "dest": "api/index.py"
     }
-  ],
-  "functions": {
-    "app.py": {
-      "memory": 512,
-      "maxDuration": 10
-    }
-  }
+  ]
 }
