--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Flask==3.1.0
 numpy==2.2.2
-packaging==24.2
 pandas==2.2.3
-pillow==11.1.0
-
+scikit-learn==1.6.1
+Flask==3.1.0
+python-dotenv
+Werkzeug==3.1.3
